able to reduce allocations for polynomials, but not transcendental functions, proceeding